<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CriminalIntent</string>
    <string name="empty_list">There are no crimes.</string>
    <string name="add_crime">Add crime</string>
    <string name="crime_solved_label">Is it solved?</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_title_hint">Enter title here.</string>
    <string name="date_picker_title">Pick a new Date</string>
    <string name="menu_add_crime">Add Crime</string>
    <string name="delete_crime_item">Delete Crime</string>
    <string name="delete_crime_image">Delete Image.</string>
    <string name="choose_suspect">Choose a Suspect</string>
    <string name="send_crime_report">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was reported on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">There is no suspect.</string>
    <string name="crime_report_suspect">The suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="call_suspect_button">Call Suspect</string>


</resources>
